# DataGuard

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  dashboard.py  docker-compose.yml  pyproject.toml  run_pipeline.py
.github/workflows/: ci.yml  dataguard-ci.yml
config/: alerts.yaml  thresholds.yaml
docs/: architecture.md  deployment.md  development.md  getting_started.md  usage.md
src/: alerts.py  config.py  connectors.py  data_catalog.py  data_generator.py  detectors.py  history.py  utils.py  validators.py
tests/: test_data_catalog.py  test_detectors.py  test_utils.py  test_validators.py
